@@ -1,41 +1,46 @@
-<HTML>
-<HEAD>
-   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
-   <META NAME="GENERATOR" CONTENT="Mozilla/4.01 [en] (Win95; I) [Netscape]">
-   <TITLE>Generic NMEA GPS Receiver
-</TITLE>
-</HEAD>
-<BODY>
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.2.16-22 i586) [Netscape]">
+   <title>Generic NMEA GPS Receiver
+</title>
+</head>
+<body>
 
-<H3>
-Generic NMEA GPS Receiver</H3>
+<h3>
+Generic NMEA GPS Receiver</h3>
 
-<HR>
-<H4>
-Synopsis</H4>
-Address: 127.127.20.<I>u</I>
-<BR>Reference ID: <TT>GPS</TT>
-<BR>Driver ID: <TT>GPS_NMEA</TT>
-<BR>Serial Port: <TT>/dev/gps<I>u</I></TT>; 4800 baud, 8-bits, no parity
-<BR>Features: <TT>tty_clk</TT>
-<H4>
-Description</H4>
-This driver supports GPS receivers with the <TT>$GPRMC</TT> NMEA output string.
-The driver expect the receiver to be set up to transmit a <TT>$GPRMC</TT>
+<hr>
+<h4>
+Synopsis</h4>
+Address: 127.127.20.<i>u</i>
+<br>Reference ID: <tt>GPS</tt>
+<br>Driver ID: <tt>GPS_NMEA</tt>
+<br>Serial Port: <tt>/dev/gps<i>u</i></tt>; 4800 baud, 8-bits, no parity
+<br>Features: <tt>tty_clk</tt>
+<h4>
+Description</h4>
+This driver supports GPS receivers with the <tt>$GPRMC</tt> NMEA output
+string by default.&nbsp; Alternately the <tt>$GPGGA</tt> or <tt>$GPGLL
+</tt>may
+be selected.
+<br>The driver expects the receiver to be set up to transmit a <tt>$GPRMC</tt>
 message every second.
-
-<P>The accuracy depend on the receiver used. Inexpesive GPS models are
-available with a claimed PPS signal accuracy of 1 <FONT FACE="Symbol">m</FONT>s
+<p>The accuracy depend on the receiver used. Inexpesive GPS models are
+available with a claimed PPS signal accuracy of 1 <font face="Symbol">m</font>s
 or better relative to the broadcast signal. However, in most cases the
 actual accuracy is limited by the precision of the timecode and the latencies
 of the serial interface and operating system.
+<p>If the Operating System supports the PPSAPI, RFC-2783, it will be used.
+<br>&nbsp;
+<p>The various GPS sentences that this driver recognises look like this:
+<br>(others quietly ignored)
+<pre><tt>$GPRMC,POS_UTC,POS_STAT,LAT,LAT_REF,LON,LON_REF,SPD,HDG,DATE,MAG_VAR,MAG_REF*CC&lt;cr>&lt;lf>
+$GPGLL,LAT,LAT_REF,LONG,LONG_REF,POS_UTC,POS_STAT*CC&lt;cr>&lt;lf>
+$GPGGA,POS_UTC,LAT,LAT_REF,LONG,LONG_REF,FIX_MODE,SAT_USED,HDOP,ALT,ALT_UNIT,GEO,G_UNIT,D_AGE,D_REF*CC&lt;cr>&lt;lf>
 
-<P>If the Operating System supports the PPSAPI, RFC-2783, it will be used.
-
-<P>The $GPRMC message that the GPS transmits look like this:
-<PRE>$GPRMC,POS_UTC,POS_STAT,LAT,LAT_REF,LON,LON_REF,SPD,HDG,DATE,MAG_VAR,MAG_REF*CC&lt;cr>&lt;lf>
-
-&nbsp; POS_UTC&nbsp; - UTC of position. Hours, minutes and seconds. (hhmmss)
+&nbsp; POS_UTC&nbsp; - UTC of position. Hours, minutes and seconds [fraction (opt.)]. (hhmmss[.fff])
 &nbsp; POS_STAT - Position status. (A = Data valid, V = Data invalid)
 &nbsp; LAT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Latitude (llll.ll)
 &nbsp; LAT_REF&nbsp; - Latitude direction. (N = North, S = South)
@@ -46,90 +51,111 @@ of the serial interface and operating system.
 &nbsp; DATE&nbsp;&nbsp;&nbsp;&nbsp; - Date (ddmmyy)
 &nbsp; MAG_VAR&nbsp; - Magnetic variation (degrees) (x.x)
 &nbsp; MAG_REF&nbsp; - Magnetic variation (E = East, W = West)
+&nbsp; FIX_MODE - Position Fix Mode ( 0 = Invalid, >0 = Valid)
+&nbsp; SAT_USED - Number Satellites used in solution
+&nbsp; HDOP&nbsp;&nbsp;&nbsp;&nbsp; - Horizontal Dilution of Precision
+&nbsp; ALT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Antenna Altitude
+&nbsp; ALT_UNIT - Altitude Units (Metres/Feet)
+&nbsp; GEO&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Geoid/Elipsoid separation
+&nbsp; G_UNIT&nbsp;&nbsp; - Geoid units (M/F)
+&nbsp; D_AGE&nbsp;&nbsp;&nbsp; - Age of last DGPS Fix
+&nbsp; D_REF&nbsp;&nbsp;&nbsp; - Reference ID of DGPS station
 &nbsp; CC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Checksum (optional)
-&nbsp; &lt;cr>&lt;lf> - Sentence terminator.</PRE>
-The driver will send a <TT>$PMOTG,RMC,0000*1D&lt;cr>&lt;lf></TT> message
-each time a <TT>$GPRMC</TT> string is needed. This is not needed on most
-GPS receivers because they automatically send the <TT>$GPRMC</TT> string
-every second and will only work on GPS receivers that understand the <TT>$PMOTG</TT>
+&nbsp; &lt;cr>&lt;lf> - Sentence terminator.</tt></pre>
+Alternate GPS sentences (other than <tt>$GPRMC</tt> - the default) may
+be enabled by setting the relevent bits of 'mode' in the server configuration
+line
+<br>&nbsp;* server 127.127.20.x mode X
+<br>&nbsp;&nbsp;&nbsp; bit 0 - enables RMC&nbsp;&nbsp;&nbsp; ( value =
+1)
+<br>&nbsp;&nbsp;&nbsp; bit 1 - enables GGA&nbsp;&nbsp;&nbsp; ( value =
+2)
+<br>&nbsp;&nbsp;&nbsp; bit 2 - enables GLL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+( value = 4)
+<br>multiple sentences may be selected
+<br>&nbsp;
+<p>The driver will send a <tt>$PMOTG,RMC,0000*1D&lt;cr>&lt;lf></tt> message
+each time a <tt>$GPRMC</tt> string is needed. This is not needed on most
+GPS receivers because they automatically send the <tt>$GPRMC</tt> string
+every second and will only work on GPS receivers that understand the <tt>$PMOTG</tt>
 string. Others will just ignore it.
-<H4>
-Setting up the Garmin GPS-25XL</H4>
+<h4>
+Setting up the Garmin GPS-25XL</h4>
 Switch off all output with by sending it the following string.
-<PRE>"$PGRMO,,2&lt;cr>&lt;lf>"</PRE>
+<pre>"$PGRMO,,2&lt;cr>&lt;lf>"</pre>
 Now switch only $GPRMC on by sending it the following string.
-<PRE>"$PGRMO,GPRMC,1&lt;cr>&lt;lf>"</PRE>
+<pre>"$PGRMO,GPRMC,1&lt;cr>&lt;lf>"</pre>
 On some systems the PPS signal isn't switched on by default. It can be
 switched on by sending the following string.
-<PRE>"$PGRMC,,,,,,,,,,,,2&lt;cr>&lt;lf>"</PRE>
+<pre>"$PGRMC,,,,,,,,,,,,2&lt;cr>&lt;lf>"</pre>
 
-<H4>
-Monitor Data</H4>
-The $GPRMC string that is used is written to the clockstats file.
-<H4>
-Fudge Factors</H4>
+<h4>
+Monitor Data</h4>
+The GPS sentence(s) that is used is written to the clockstats file.
+<h4>
+Fudge Factors</h4>
 
-<DL>
-<DT>
-<TT>time1 <I>time</I></TT></DT>
+<dl>
+<dt>
+<tt>time1 <i>time</i></tt></dt>
 
-<DD>
+<dd>
 Specifies the time offset calibration factor, in seconds and fraction,
-with default 0.0.</DD>
+with default 0.0.</dd>
 
-<DT>
-<TT>time2 <I>time</I></TT></DT>
+<dt>
+<tt>time2 <i>time</i></tt></dt>
 
-<DD>
-Not used by this driver.</DD>
+<dd>
+Not used by this driver.</dd>
 
-<DT>
-<TT>stratum <I>number</I></TT></DT>
+<dt>
+<tt>stratum <i>number</i></tt></dt>
 
-<DD>
-Specifies the driver stratum, in decimal from 0 to 15, with default 0.</DD>
+<dd>
+Specifies the driver stratum, in decimal from 0 to 15, with default 0.</dd>
 
-<DT>
-<TT>refid <I>string</I></TT></DT>
+<dt>
+<tt>refid <i>string</i></tt></dt>
 
-<DD>
+<dd>
 Specifies the driver reference identifier, an ASCII string from one to
-four characters, with default <TT>GPS</TT>.</DD>
+four characters, with default <tt>GPS</tt>.</dd>
 
-<DT>
-<TT>flag1 0 | 1</TT></DT>
+<dt>
+<tt>flag1 0 | 1</tt></dt>
 
-<DD>
-Not used by this driver.</DD>
+<dd>
+Not used by this driver.</dd>
 
-<DT>
-<TT>flag2 0 | 1</TT></DT>
+<dt>
+<tt>flag2 0 | 1</tt></dt>
 
-<DD>
-Specifies the PPS signal on-time edge: 0 for assert (default),
-1 for clear.</DD>
+<dd>
+Specifies the PPS signal on-time edge: 0 for assert (default), 1 for clear.</dd>
 
-<DT>
-<TT>flag3 0 | 1</TT></DT>
+<dt>
+<tt>flag3 0 | 1</tt></dt>
 
-<DD>
-Controls the kernel PPS discipline: 0 for disable (default), 1
-for enable.</DD>
+<dd>
+Controls the kernel PPS discipline: 0 for disable (default), 1 for enable.</dd>
 
-<DT>
-<TT>flag4 0 | 1</TT></DT>
+<dt>
+<tt>flag4 0 | 1</tt></dt>
 
-<DD>
-Not used by this driver.</DD>
+<dd>
+Not used by this driver.</dd>
 
+<br>&nbsp;
+<p>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+<p>Additional Information
+<p><a href="refclock.htm">Reference Clock Drivers</a></dl>
 
-<P>Additional Information
+<hr>
+<address>
+David L. Mills (mills@udel.edu)</address>
 
-<P><A HREF="refclock.htm">Reference Clock Drivers</A></DL>
-
-<HR>
-<ADDRESS>
-David L. Mills (mills@udel.edu)</ADDRESS>
-
-</BODY>
-</HTML>
+</body>
+</html>
